django-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-app
  labels:
    name: django-app
    namespace: django-app
    fluxcd.io/ignore: "false"
    fluxcd.io/automated: "true"
