django-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-django-app
  labels:
    app: my-django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-django-app
  template:
    metadata:
      labels:
        app: my-django-app
    spec:
      containers:
        - name: my-django-app
          image: 732192326228.dkr.ecr.eu-central-1.amazonaws.com/ecr_repo:latest
          ports:
            - containerPort: 8000
