django-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app
  namespace: django-app
spec:
  type: LoadBalancer
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
