django-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
     - host: my-django-app.local
       http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-app
                port:
                  number: 8000
